[project]
name = "storm-fastapi-wrapper"
version = "0.1.0"
description = "FastAPI wrapper for STORM AI service"
authors = [
    {name = "ManavRajput",email = "manavpathania780@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "huggingface-hub (>=0.20.0)",
    "transformers (>=4.37.0)",
    "accelerate (>=0.27.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

